--- a/app/views/shared/_main_chat.html.haml
+++ b/app/views/shared/_main_chat.html.haml
@@ -1,1 +1,40 @@
-＜チャット画面＞
+.chat-main
+  .chat-main__group-info
+    .chat-main__group-info__name
+      test
+      .chat-main__group-info__name__member
+        kiyo
+    .chat-main__group-info__edit
+    = link_to "Edit", "#", class: "chat-main__group-info__edit__link"
+  .chat-main__message-list
+    .chat-main__message-list__name
+      masa
+      .chat-main__message-list__date
+      2019/11/20(Wed) 17:43:01
+    .chat-main__message-list__comment
+    おはよう！
+    .chat-main__message-list__name
+      masa
+      .chat-main__message-list__date
+      2019/11/20(Wed) 17:43:01
+    .chat-main__message-list__comment
+    おはよう！
+    .chat-main__message-list__name
+      masa
+      .chat-main__message-list__date
+      2019/11/20(Wed) 17:43:01
+    .chat-main__message-list__comment
+    おはよう！
+    .chat-main__message-list__name
+      masa
+      .chat-main__message-list__date
+      2019/11/20(Wed) 17:43:01
+    .chat-main__message-list__comment
+    おはよう！
+
+  .chat-main__message-form
+    .chat-main__message-form__block
+      .chat-main__message-form__text
+      .chat-main__message-form__image
+    .chat-main__message-form__send
+    = link_to "Edit", "#", class: "chat-main__message-form__send"
