--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -1,1 +1,38 @@
-＜サイドバー＞
+.side-bar
+  .side-bar__user-name
+    .side-bar__user-name--top-items
+      .side-bar__user-name--top-items__name
+      masa
+      .side-bar__user-name--top-items__icons
+        .side-bar__user-name--top-items__icons__write
+        = link_to "/" , class: "side-bar__user-name--top-items__icons__set__color" do  
+          = icon('fas', 'edit')
+    
+        .side-bar__user-name--top-items__icons__set
+        = link_to "/" , class: "side-bar__user-name--top-items__icons__set__color" do
+          = icon('fas', 'cog')
+  
+  .side-bar__group-list
+    .side-bar__group-list__name
+    wwwwww
+    .side-bar__group-list__message
+    wwwwwwwww
+    .side-bar__group-list__name
+    wwwwww
+    .side-bar__group-list__message
+    wwwwwwwww
+    .side-bar__group-list__name
+    wwwwww
+    .side-bar__group-list__message
+    wwwwwwwww
+    .side-bar__group-list__name
+    wwwwww
+    .side-bar__group-list__message
+    wwwwwwwww
+    .side-bar__group-list__name
+    wwwwww
+    .side-bar__group-list__message
+    wwwwwwwww
+  -# , class: "write__btn" do
+  -# 'fab', 'twitter' , class: "edit__btn" do
+    
