--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -1,38 +1,36 @@
 .side-bar
-  .side-bar__user-name
-    .side-bar__user-name--top-items
-      .side-bar__user-name--top-items__name
+  .user-name
+    .user-name--top-items
+      .user-name--top-items__name
       masa
-      .side-bar__user-name--top-items__icons
-        .side-bar__user-name--top-items__icons__write
-        = link_to "/" , class: "side-bar__user-name--top-items__icons__set__color" do  
+      .user-name--top-items__icons
+        .user-name--top-items__icons__write
+        = link_to "/" , class: "user-name--top-items__icons__write" do  
           = icon('fas', 'edit')
     
-        .side-bar__user-name--top-items__icons__set
-        = link_to "/" , class: "side-bar__user-name--top-items__icons__set__color" do
+        .user-name--top-items__icons__set
+        = link_to "/" , class: "user-name--top-items__icons__set" do
           = icon('fas', 'cog')
   
-  .side-bar__group-list
-    .side-bar__group-list__name
+  .group-list
+    .group-list__name
     wwwwww
-    .side-bar__group-list__message
+    .group-list__message
     wwwwwwwww
-    .side-bar__group-list__name
+    .group-list__name
     wwwwww
-    .side-bar__group-list__message
+    .group-list__message
     wwwwwwwww
-    .side-bar__group-list__name
+    .group-list__name
     wwwwww
-    .side-bar__group-list__message
+    .group-list__message
     wwwwwwwww
-    .side-bar__group-list__name
+    .group-list__name
     wwwwww
-    .side-bar__group-list__message
+    .group-list__message
     wwwwwwwww
-    .side-bar__group-list__name
+    .group-list__name
     wwwwww
-    .side-bar__group-list__message
+    .group-list__message
     wwwwwwwww
-  -# , class: "write__btn" do
-  -# 'fab', 'twitter' , class: "edit__btn" do
     
