--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -130,6 +130,7 @@
       }
 
   form{
+    background-color: #d2d2d2;
     display: flex;
     .message-form{
       width: 100%;
@@ -139,7 +140,6 @@
       &__text{
         height: 50px;
         width: 100%;
-        background-color: #434a54;
         padding: 0 40px 0 10px;
         }
       &__image{
