--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -2,7 +2,7 @@
   .user-name
     .user-name--top-items
       .user-name--top-items__name
-      = cureent_user.name
+      = current_user.name
       .user-name--top-items__icons
         .user-name--top-items__icons__write
         = link_to edit_user_path(current_user) , class: "user-name--top-items__icons__write" do  
