--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -2,35 +2,22 @@
   .user-name
     .user-name--top-items
       .user-name--top-items__name
-      = current_user.name
+        = current_user.name
       .user-name--top-items__icons
         .user-name--top-items__icons__write
-        = link_to edit_user_path(current_user) , class: "user-name--top-items__icons__write" do  
-          = icon('fas', 'edit')
+          = link_to new_group_path , class: "user-name--top-items__icons__write" do  
+            = icon('fas', 'edit')
     
         .user-name--top-items__icons__set
-        = link_to "/" , class: "user-name--top-items__icons__set" do
-          = icon('fas', 'cog')
+          = link_to edit_user_registration_path , class: "user-name--top-items__icons__set" do
+            = icon('fas', 'cog')
   
-  .group-list
-    .group-list__name
-    wwwwww
-    .group-list__message
-    wwwwwwwww
-    .group-list__name
-    wwwwww
-    .group-list__message
-    wwwwwwwww
-    .group-list__name
-    wwwwww
-    .group-list__message
-    wwwwwwwww
-    .group-list__name
-    wwwwww
-    .group-list__message
-    wwwwwwwww
-    .group-list__name
-    wwwwww
-    .group-list__message
-    wwwwwwwww
-    
+ 
+  .side-bar__group-list
+    - current_user.groups.each do |group|
+      .group-list
+        = link_to '#' , class: "group-list__link" do
+          .group-list__name
+            = group.name
+          .group-list__message
+            メッセージはまだありません。
