--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -16,8 +16,8 @@
   .side-bar__group
     - current_user.groups.each do |group|
       .side-bar__group-list
-        = link_to '#' , class: "side-bar__group-list" do
+        = link_to group_messages_path(group) , class: "side-bar__group-list" do
           .side-bar__group-list__name
             = group.name
           .side-bar__group-list__message
-            メッセージはまだありません。
+            = group.show_last_message
