--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -22,8 +22,8 @@
         width:260px;
         display: flex;
         justify-content: space-between;
-      margin-left: 0px;
-      position: relative;
+        margin-left: 0px;
+        position: relative;
         &__name{
           
 
@@ -55,7 +55,7 @@
           padding-top: 20px;
           text-decoration: none;
           color: white;
-          
+
           &-list__name{
             font-size: 15px;
             line-height: 15px;
@@ -87,14 +87,20 @@
       border-bottom: #eeeeee;
       display: flex;
       justify-content: space-between;
-      &__name{
-        color: #333333;
-        font-size: 20px; 
+      &__brock{
+        height: 100px;
         margin: 35px 0px 15px 40px;
+        &__name{
+          color: #333333;
+          font-size: 20px; 
+        }
         &__member{
-          color: #999999;
-          font-size: 12px;
-          margin-top: 15px;
+      
+          &__style{
+            color: #999999;
+            font-size: 12px;
+            display: inline-block;
+          }
         }
       }
       &__edit{
@@ -112,27 +118,32 @@
         }
       }
     }
-    .message-list{
-      background-color: #fafafa;
-      height: calc(100vh - 100px);
-      padding-left: 40px;
-      &__name{
-        color: #333333;
-        font-size: 16px;
-        margin-top: 35px;
-        margin-bottom: 12px;
-        display: flex;
-        &__date{
-          color: #999999;
-          font-size: 12px;
-          margin-left: 10px; 
-        }
+  .message-list{
+    background-color: #fafafa;
+    height: calc(100vh - 100px);
+    padding-left: 40px;
+    &__name{
+      color: #333333;
+      font-size: 16px;
+      margin-top: 35px;
+      margin-bottom: 12px;
+      height: 16px;
+      display: flex;
+      &__date{
+        color: #999999;
+        font-size: 12px;
+        margin-left: 10px; 
       }
-      &__comment{
-        color: #434A54;
-        font-size: 14px;
+    }
+    
+    &__comment{
+      color: #434A54;
+      font-size: 14px;
       }
-      }
+    }
+  
+    
+  
 
   form{
     background-color: #d2d2d2;
@@ -147,23 +158,23 @@
         width: 100%;
         padding: 0 40px 0 10px;
         }
-      &__image{
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        font-size: 1.3rem;
-        margin-right: 10px;
-        cursor: pointer;
-        &__file{
-          display: none;
-        }
-        }
+        &__image{
+          position: absolute;
+          left: 850px;
+          top: 10px;
+          font-size: 1.3rem;
+          margin-right: 10px;
+          cursor: pointer;
+          &__file{
+              display: none;
+            }
+            }
       }
     .message-form__send{
       height: 50px;
       width: 100px;
       padding: 0 30px;
-      margin: 10px 40px 10px 15px;
+      margin: 0px 40px 10px 15px;
       background-color: #38aef0;
       color: white;
       }
