--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -118,21 +118,28 @@
         }
       }
     }
-  .message-list{
-    background-color: #fafafa;
-    height: calc(100vh - 100px);
-    padding-left: 40px;
-    &__name{
-      color: #333333;
-      font-size: 16px;
-      margin-top: 35px;
-      margin-bottom: 12px;
-      height: 16px;
-      display: flex;
-      &__date{
-        color: #999999;
-        font-size: 12px;
-        margin-left: 10px; 
+  .messages{
+      background-color: #fafafa;
+      height: calc(100vh - 180px);
+      padding: 40px 40px;
+      overflow: scroll;
+    .message-list{
+      padding-bottom: 40px;
+      &__upper{
+        display: flex;
+        margin-bottom: 10px;
+        &__name{
+          color: #333333;
+          font-size: 16px;
+          font-weight: bold;
+          height: 16px;
+          display: flex;
+        }
+        &__date{
+          color: #999999;
+          font-size: 12px;
+          margin-left: 10px; 
+          }
       }
     }
     
