--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,9 +1,11 @@
-.message-list__name
-  = message.user.name
-  .message-list__name__date
-    = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
-.lower-message
-  - if message.content.present?
-    .message-list__comment
-      = message.content
-  = image_tag message.image.url, class: 'lower-message__image' if message.image.present?
+.message-list
+  .message-list__upper  
+    .message-list__upper__name
+      = message.user.name
+    .message-list__upper__date
+      = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
+  .lower-message
+    - if message.content.present?
+      .message-list__content
+        = message.content
+    = image_tag message.image.url, class: 'lower-message__image' if message.image.present?
