--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -167,7 +167,7 @@
         }
         &__image{
           position: absolute;
-          left: 850px;
+          right: 160px;
           top: 10px;
           font-size: 1.3rem;
           margin-right: 10px;
