--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.message-list
+.message-list{data: {message: {id: message.id}}}
   .message-list__upper  
     .message-list__upper__name
       = message.user.name
