--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -113,8 +113,9 @@
           height: 40px;
           width: 72px;
           margin: 28px 20px;
-          padding: 10px;
-          
+          padding: 0px 20px;
+          border: solid 1px #38aef0;
+          line-height: 40px;
         }
       }
     }
